docs/versioned_docs/version-1.0.0/tinyLeague-app/changelog.md
---
id: changelog
title: Changelog
sidebar_position: 6
---

## 🗒️ Changelog

Stay up to date with the latest improvements to the **tinyLeague™ Hub** app. This page includes recent updates and version info.

---

### **v1.2** – *March 2025*

tinyLeague Hub - Version 1.2 Release Notes

🆕 What's New
- Over-the-air updates to easily update module firmware
- New Bluetooth Capabilities for stronger connections, as well as a new available devices menu
- UI framework overhaul

🛠 Improvements & Enhancements
- Reduced potential bluetooth standard related crashes
- OTA optimizations for ease of update
- More robust connection to uphold game integrity

🔄 Make sure to update to the latest version for the best experience!

---

### **v1.1** – *February 2025*

tinyLeague Hub - Version 1.1 Release Notes

🆕 What's New
- Fixed bluetooth permission settings bug crash
- Fixed bluetooth paired devices menu parallel scroll UI bug

🛠 Improvements & Enhancements
- Reduced potential bluetooth permissions related crashes
- All settings components are dynamically sized to allow access to the user

🔄 Make sure to update to the latest version for the best experience!

---

### **v1.0** – *February 2025*

tinyLeague Hub - Version 1.0 Release Notes

🆕 What's New
- Robust shot-clocking application for use with tinyLeague™ shot clock modules, or for practice!

🛠 Improvements & Enhancements
- New functionality to customize how your shotclock looks and operates, including high/low timer limits, color selection, sound controls, and more.

🔄 Make sure to update to the latest version for the best experience!

---

**Need help understanding a new feature, or have a reccomendation?**

import useBaseUrl from '@docusaurus/useBaseUrl';

<a
  href="https://discord.gg/gWaTMhhaU4"
  target="_blank"
  rel="noopener noreferrer"
>
  <div style={{ display: 'flex', flexDirection: 'column', alignItems: 'center' }}>
    <img
      src={useBaseUrl('https://raw.githubusercontent.com/Digital-Sports-Solutions-Official/DSS-assets/main/img/Logos/Discord-Symbol-Blurple.svg')}
      alt="Discord"
      style={{ width: '64px', height: '64px' }}
    />
    <strong style={{ marginTop: '0.5rem' }}>Join Our Discord!</strong>
  </div>
</a>

