docs/versioned_docs/version-1.1.0/tinyLeague-app/changelog.md
---
id: changelog
title: Changelog
sidebar_position: 7
---

## 🗒️ Changelog

Stay up to date with the latest improvements to the **tinyLeague™ Hub** app. This page includes recent updates and version info.

---

### **v1.4.3** – *July 2025*

tinyLeague Hub - Version 1.4.3 Release Notes

🆕 What's New
- Supports more Android phones
- Optimization and bug fixes 

🔄 Make sure to update to the latest version for the best experience!

---

### **v1.4.2** – *July 2025*

tinyLeague Hub - Version 1.4.2 Release Notes

🆕 What's New
- Corrected versioning issues with app
- Updated cross platform release app bundle for iOS and Android

🛠 Improvements & Enhancements
- Updated licensing for application

🔄 Make sure to update to the latest version for the best experience!

---

### **v1.4.1** – *July 2025*

tinyLeague Hub - Version 1.4.1 Release Notes

🆕 What's New

- UI Update

🛠 Improvements & Enhancements

- Replaced Bluetooth icon
- Reworked the available devices scanning

🔄 Make sure to update to the latest version for the best experience!

---

### **v1.4** – *July 2025*

tinyLeague Hub - Version 1.4 Release Notes

🆕 What's New
- UI Overhaul
- Device Information menu
- Multi-Device Support
- App theme toggle

🛠 Improvements & Enhancements
- tinyLeague Hub is now available on iOS and Android!
- Added device connection information and signal indicator
- Multiple devices can now be connected to a single smart device
- App theme can be toggled between Light/Dark modes

🔄 Make sure to update to the latest version for the best experience!

---

### **v1.3** – *April 2025*

tinyLeague Hub - Version 1.3 Release Notes

🆕 What's New
- Small fix to allow more support for an increased number of devices.

🛠 Improvements & Enhancements
- Fixed an issue when trying to connect to module around many BLE services.

🔄 Make sure to update to the latest version for the best experience!

---

### **v1.2** – *March 2025*

tinyLeague Hub - Version 1.2 Release Notes

🆕 What's New
- Over-the-air updates to easily update module firmware
- New Bluetooth Capabilities for stronger connections, as well as a new available devices menu
- UI framework overhaul

🛠 Improvements & Enhancements
- Reduced potential bluetooth standard related crashes
- OTA optimizations for ease of update
- More robust connection to uphold game integrity

🔄 Make sure to update to the latest version for the best experience!

---

### **v1.1** – *February 2025*

tinyLeague Hub - Version 1.1 Release Notes

🆕 What's New
- Fixed bluetooth permission settings bug crash
- Fixed bluetooth paired devices menu parallel scroll UI bug

🛠 Improvements & Enhancements
- Reduced potential bluetooth permissions related crashes
- All settings components are dynamically sized to allow access to the user

🔄 Make sure to update to the latest version for the best experience!

---

### **v1.0** – *February 2025*

tinyLeague Hub - Version 1.0 Release Notes

🆕 What's New
- Robust shot-clocking application for use with tinyLeague™ shot clock modules, or for practice!

🛠 Improvements & Enhancements
- New functionality to customize how your shotclock looks and operates, including high/low timer limits, color selection, sound controls, and more.

🔄 Make sure to update to the latest version for the best experience!

---

**Need help understanding a new feature, or have a reccomendation?**

import useBaseUrl from '@docusaurus/useBaseUrl';

<a
  href="https://discord.com/invite/6HjeNJM6F4"
  target="_blank"
  rel="noopener noreferrer"
>
  <div style={{ display: 'flex', flexDirection: 'column', alignItems: 'center' }}>
    <img
      src={useBaseUrl('https://raw.githubusercontent.com/Digital-Sports-Solutions-Official/DSS-assets/main/img/Logos/Discord-Symbol-Blurple.svg')}
      alt="Discord"
      style={{ width: '64px', height: '64px' }}
    />
    <strong style={{ marginTop: '0.5rem' }}>Join Our Discord!</strong>
  </div>
</a>